tests/reference/asr-arrays_08-ba317a3.stderr
warning: The module 'numpy' located in $DIR/src/bin/../runtime/lpython_intrinsic_numpy.py cannot be loaded
 --> tests/errors/arrays_08.py:2:1
  |
2 | from numpy import empty, int64
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ imported here

warning: The module 'lpython_builtin' located in $DIR/src/bin/../runtime/lpython_builtin.py cannot be loaded
   --> $DIR/src/bin/../runtime/lpython_intrinsic_numpy.py:364:12
    |
364 |     return x1 % x2
    |            ^^^^^^^ imported here

semantic error: The symbol '_lpython_floordiv' not found in the module 'lpython_builtin'
   --> $DIR/src/bin/../runtime/lpython_builtin.py:209:15
    |
209 |     if (n_ - (n_ // 2)*2) == 0:
    |               ^^^^^^^ 
